overflow fix for results in search

--- a/cms/static/css/styles.scss
+++ b/cms/static/css/styles.scss
@@ -298,8 +298,10 @@ ul.inline-logos li img {
       margin-bottom: 10px;
       float: left;
       height: 430px;
+      overflow: hidden;
     }
     img {
+      width: 100%;
       padding-bottom: 20px;
       margin-bottom: 20px;
       border-bottom: 1px dotted #888;
